<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="453dp"
        android:text="@string/change_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/red"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="385dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_text" />

    <Button
        android:id="@+id/green"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="310dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/grey"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="242dp"
        android:text="@string/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/size_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="195dp"
        android:text="@string/change_size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grey" />

    <Button
        android:id="@+id/small_button"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="25dp"
        android:text="@string/small"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/big_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_change" />

    <Button
        android:id="@+id/big_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="57dp"
        android:text="@string/big"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/small_button" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="5dp"
        android:text="@string/medium"
        app:layout_constraintBottom_toTopOf="@+id/big_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/small_button" />
</android.support.constraint.ConstraintLayout>